--- a/README
+++ b/README
@@ -1,1 +1,4 @@
-The Sudanese Genetic Variation Portal is a public web website. Currently, it boasts about 3.5 million high-quality and extensively annotated SNPs, from 242 healthy Sudanese and South Sudanese individuals. Examples of available annotations include consequence types, allele frequencies from the 1000 Genomes Project and GnomAD project, functional prediction scores, conservation scores, deleteriousness score, as well as clinical annotations from Clinvar. GWAS catalog, and COSMIC. It also boasts pharmacogenomics data from DGIdb. More importantly, I have computed allele frequencies for the Sudanese population in general as well as the major Sudanese sub-populations. Thus, we are providing the medical and research community with a wealth of genetic variation data from this historically and geographically significant region.
+The Sudanese Genetic Variation Portal 
+======================================
+
+is a public app based on R shiny. Currently, it boasts about 3.5 million high-quality and extensively annotated SNPs, from 242 healthy Sudanese and South Sudanese individuals. Examples of available annotations include consequence types, allele frequencies from the 1000 Genomes Project and GnomAD project, functional prediction scores, conservation scores, deleteriousness score, as well as clinical annotations from Clinvar. GWAS catalog, and COSMIC. It also boasts pharmacogenomics data from DGIdb. More importantly, I have computed allele frequencies for the Sudanese population in general as well as the major Sudanese sub-populations. Thus, we are providing the medical and research community with a wealth of genetic variation data from this historically and geographically significant region.
